@@ -39,6 +39,7 @@ ClusterShell library which implements some features of the NodeSet
 and RangeSet classes.
 """
 
+import math
 import sys
 
 from ClusterShell.CLI.Error import GENERIC_ERRORS, handle_generic_error
@@ -189,8 +190,15 @@ def nodeset():
             dispdefault = ""
         return
 
+    autostep = options.autostep
+
+    # Do not use autostep for computation when a percentage or the special
+    # value 'auto' is specified. Real autostep value is set post-process.
+    if type(autostep) is float or autostep == 'auto':
+        autostep = None
+
     # Instantiate RangeSet or NodeSet object
-    xset = class_set(autostep=options.autostep)
+    xset = class_set(autostep=autostep)
 
     if options.all:
         # Include all nodes from external node groups support.
@@ -198,32 +206,29 @@ def nodeset():
 
     if not args and not options.all and not options.list:
         # No need to specify '-' to read stdin in these cases
-        process_stdin(xset.update, xset.__class__, options.autostep)
+        process_stdin(xset.update, xset.__class__, autostep)
 
     # Apply first operations (before first non-option)
     for nodes in options.and_nodes:
         if nodes == '-':
-            process_stdin(xset.intersection_update, xset.__class__,
-                          options.autostep)
+            process_stdin(xset.intersection_update, xset.__class__, autostep)
         else:
-            xset.intersection_update(class_set(nodes,
-                                               autostep=options.autostep))
+            xset.intersection_update(class_set(nodes, autostep=autostep))
     for nodes in options.sub_nodes:
         if nodes == '-':
-            process_stdin(xset.difference_update, xset.__class__,
-                          options.autostep)
+            process_stdin(xset.difference_update, xset.__class__, autostep)
         else:
-            xset.difference_update(class_set(nodes, autostep=options.autostep))
+            xset.difference_update(class_set(nodes, autostep=autostep))
     for nodes in options.xor_nodes:
         if nodes == '-':
             process_stdin(xset.symmetric_difference_update, xset.__class__,
-                          options.autostep)
+                          autostep)
         else:
-            xset.symmetric_difference_update(class_set(nodes, \
-                                             autostep=options.autostep))
+            xset.symmetric_difference_update(class_set(nodes,
+                                                       autostep=autostep))
 
     # Finish xset computing from args
-    compute_nodeset(xset, args, options.autostep)
+    compute_nodeset(xset, args, autostep)
 
     # The list command has a special handling
     if options.list > 0:
@@ -238,18 +243,27 @@ def nodeset():
             _xset.update(xset[sli])
         xset = _xset
 
-    format = options.output_format # default to '%s'
+    if options.autostep == 'auto':
+        # Simple implementation of --autostep=auto
+        # if we have at least 3 nodes, all index should be foldable as a-b/n
+        xset.autostep = max(3, len(xset))
+    elif type(options.autostep) is float:
+        # at least % of nodes should be foldable as a-b/n
+        autofactor = float(options.autostep)
+        xset.autostep = int(math.ceil(float(len(xset)) * autofactor))
+
+    fmt = options.output_format # default to '%s'
 
     # Display result according to command choice
     if options.expand:
-        xsubres = lambda x: separator.join((format % s for s in x.striter()))
+        xsubres = lambda x: separator.join((fmt % s for s in x.striter()))
     elif options.fold:
-        xsubres = lambda x: format % x
+        xsubres = lambda x: fmt % x
     elif options.regroup:
-        xsubres = lambda x: format % x.regroup(options.groupsource,
-                                               noprefix=options.groupbase)
+        xsubres = lambda x: fmt % x.regroup(options.groupsource,
+                                            noprefix=options.groupbase)
     else:
-        xsubres = lambda x: format % len(x)
+        xsubres = lambda x: fmt % len(x)
 
     if not xset or options.maxsplit <= 1 and not options.contiguous:
         print xsubres(xset)
